# newsdim

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
prompts/: news_scorer_zh_CN_v2.txt
scripts/: benchmark.py  build_dict.py  convert_encoding.py  data_quality.py  evaluate_head.py  ingest.py  precompute_embeddings.py  score_news.py  test_scorer.py  train_head.py  train_lora.py
src/newsdim/: __init__.py  dims.py  server.py  tagger.py
src/newsdim/ann_scorer/: __init__.py  rules.py
src/newsdim/assets/: head_v2_ridge1.0.npz
src/newsdim/embed/: __init__.py  encoder.py
src/newsdim/news_scorer/: __init__.py  scorer.py
src/newsdim/news_scorer/prompts/: news_scorer_zh_CN_v1.txt
src/newsdim/retrieval/: __init__.py  corpus.py  tokenizer.py
src/newsdim/retrieval/dict/: finance.txt  finance_supplement.txt
src/newsdim/train/: __init__.py  trainer.py
tests/: test_ann_rules.py  test_core.py  test_retrieval.py
