[project]
name = "newsdim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
scorer = [
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
]
train = [
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
ingest = [
    "polars>=1.40.1",
    "tqdm>=4.67.3",
]
all = [
    "newsdim[server,scorer,train,ingest]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsdim"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.5",
    "newsdim[all]",
]

[tool.hatch.build.targets.wheel.force-include]
"src/newsdim/assets" = "newsdim/assets"
"src/newsdim/news_scorer/prompts" = "newsdim/news_scorer/prompts"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
