[project]
name = "newsdim"
version = "0.9.1"
description = "轻量级中文财经新闻维度标注器 — BGE embedding + linear head"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "junduck" }]
keywords = [
    "nlp",
    "chinese",
    "financial-news",
    "embedding",
    "sentiment",
    "classification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=2.4.4",
    "sentence-transformers>=5.4.1",
    "jieba>=0.42.1",
    "bm25s>=0.2",
]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn>=0.34.0"]
scorer = ["openai>=2.32.0", "python-dotenv>=1.2.2"]
train = [
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
ingest = ["polars>=1.40.1", "tqdm>=4.67.3"]
all = ["newsdim[server,scorer,train,ingest]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsdim"]

[dependency-groups]
build-dict = ["tushare>=1.4.29"]
dev = ["pytest>=9.0.3", "ruff>=0.5", "newsdim[all]"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
